# course_test_FastApi

./: .gitignore  README.md  pyproject.toml
course_test/: main.py
tests/: test_main.py
