[tool.poetry]
name = "course-test"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zhuravlev <Alexandrzhuravlyov828@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pytest = "^7.4.0"
uvicorn = "^0.23.1"
httpx = "^0.24.1"
requests = "^2.31.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
